tests/paczka1/small_fuzzy/35441335.err
Error in line 4: A102 S343 30,4
Error in line 9: MOV7Do4Brs2 S343 13,4
